# leukeleu-django-checks

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/python-setup/: action.yml
.github/workflows/: ci.yml  release.yml  test.yml
leukeleu_django_checks/: apps.py  checks.py
leukeleu_django_checks/management/commands/: list_superusers.py
tests/: test_checks.py  test_list_staff_users.py  test_list_superusers.py  test_settings.py
tests/custom_users/: models.py
tests/mocks/mock_sentry_sdk/: __init__.py
tests/urls/: urls.py
