[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = [
    "py36",
]

[tool.coverage.run]
branch = true
source = [
    "leukeleu_django_checks",
    "tests",
]
omit = [
    "tests/test_settings.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 95

[tool.coverage.html]
directory = "var/htmlcov"

[tool.check-manifest]
ignore = []

[tool.isort]
profile = "black"
known_django = [
    "django",
]
known_first_party = [
    "leukeleu_django_checks",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
lines_between_types = 1
src_paths = [
    "leukeleu_django_checks",
    "tests",
]

[tool.mypy]
strict = true  # Enable optional error checks
warn_unreachable = true  # Warn about unreachable code
pretty = true  # Show formatted code on error
show_error_context = true
plugins = [
    "mypy_django_plugin.main",
]
python_version = 3.8
files = [
    "leukeleu_django_checks",
    "tests",
]

[tool.django-stubs]
django_settings_module = "tests.test_settings"
